--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,14 +15,12 @@
     @foreach (var item in Model.items4page)
     {
         <div class="card text-bg-light m-3" style="width: 25rem;">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
                 <h4 class="card-title">@item.text</h4>
-                <a asp-page="/XMLpage" asp-route-message="@item.xmlLink" class="btn btn-primary" target="_blank">Link</a>
+                <a asp-page="/XMLpage" asp-route-message="@item.xmlLink" class="btn btn-primary align-self-end" target="_blank">Link</a>
             </div>
         </div>
     }
-
-
 </div>
 
 <div class="d-flex flex-column align-items-center">
