C# code naming convention violation fixed

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -16,8 +16,8 @@
     {
         <div class="card text-bg-light m-3" style="width: 25rem;">
             <div class="card-body d-flex flex-column">
-                <h4 class="card-title">@item.text</h4>
-                <a asp-page="/XMLpage" asp-route-message="@item.xmlLink" class="btn btn-primary align-self-end" target="_blank">Link</a>
+                <h4 class="card-title">@item.Text</h4>
+                <a asp-page="/XMLpage" asp-route-message="@item.XmlLink" class="btn btn-primary align-self-end" target="_blank">Link</a>
             </div>
         </div>
     }
