--- a/Pages/XMLpage.cshtml
+++ b/Pages/XMLpage.cshtml
@@ -10,10 +10,10 @@
     {
         <div class="card text-bg-light m-3" style="width: 25rem;">
             <div class="card-body">
-                <h4 class="card-title">@item.title</h4>
-                <p class="fw-light" style="color: #717070c9">@item.pubdate</p>
-                <p class="card-text">@Html.Raw(item.description)</p>
-                <a href="@item.link" target="_blank" class="btn btn-primary">Link</a>
+                <h4 class="card-title">@item.Title</h4>
+                <p class="fw-light" style="color: #717070c9">@item.PubDate</p>
+                <p class="card-text">@Html.Raw(item.Description)</p>
+                <a href="@item.Link" target="_blank" class="btn btn-primary">Link</a>
             </div>
         </div>
     }
